fixed scroll on Safe Apps icons and text overflows in the Safe Apps title

--- a/src/components/safe-apps/SafeAppCard/styles.module.css
+++ b/src/components/safe-apps/SafeAppCard/styles.module.css
@@ -22,6 +22,8 @@
   line-height: 175%;
   margin: 0;
 
+  flex-grow: 1;
+
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
